[gd_scene load_steps=3 format=2]

[ext_resource path="res://Wally.gd" type="Script" id=1]
[ext_resource path="res://WPlayer.gd" type="Script" id=2]

[node name="Wally" type="Node"]
script = ExtResource( 1 )

[node name="WPlayer" type="Node" parent="."]
script = ExtResource( 2 )

[node name="WebcamTestView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="WebcamTestView"]
margin_left = 136.0
margin_top = 72.0
margin_right = 259.0
margin_bottom = 99.0
text = "WebcamTestView"
__meta__ = {
"_editor_description_": "WebcamTestView"
}

[node name="GameBackgroundView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="GameBackgroundView"]
margin_left = 200.0
margin_top = 160.0
margin_right = 240.0
margin_bottom = 174.0
text = "GameBackgroundView"

[node name="GameView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="GameView"]
margin_left = 274.0
margin_top = 213.0
margin_right = 342.0
margin_bottom = 227.0
text = "GameView"

[node name="ConfigureView" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="ConfigureView"]
margin_left = 192.0
margin_top = 120.0
margin_right = 232.0
margin_bottom = 134.0
text = "ConfigureView"
